# AgenticAi

./: README.md
BankingBroduct OnLineSearchAgent/: README.md  app.py
BankingBroduct OnLineSearchAgent/AINews/: daily_summary.md  monthly_summary.md  weekly_summary.md
BankingBroduct OnLineSearchAgent/src/langgraphagenticAi/: main.py
BankingBroduct OnLineSearchAgent/src/langgraphagenticAi/LLMS/: gemininllm.py  grokllm.py
BankingBroduct OnLineSearchAgent/src/langgraphagenticAi/graph/: graph_builder.py
BankingBroduct OnLineSearchAgent/src/langgraphagenticAi/nodes/: ai_news_node.py  basic_chatbot_node.py  chatbot_with_Tool_node.py
BankingBroduct OnLineSearchAgent/src/langgraphagenticAi/state/: state.py
BankingBroduct OnLineSearchAgent/src/langgraphagenticAi/tools/: search_tool.py
BankingBroduct OnLineSearchAgent/src/langgraphagenticAi/ui/: uiConfigFile.ini  uiconfigfile.py
BankingBroduct OnLineSearchAgent/src/langgraphagenticAi/ui/streamlitui/: display_result.py  loadui.py
BlogGeneration-API-web/: .env  app-web.py  app_api.py  langgraph.json  main.py  pyproject.toml  requirements.txt
